--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="about-content">
           <div class="about-image">
             <img
-              src="Images/profile-photo.jpg"
+              src="images/profile-photo.jpg"
               alt="Shayla Nelson"
               class="profile-photo"
             />
