--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="portfolio-grid">
           <div class="portfolio-card" data-project="1">
             <div class="card-image">
-              <img src="Images/devices-card-white.png" alt="Project preview" />
+              <img src="images/devices-card-white.png" alt="Project preview" />
             </div>
             <div class="card-content">
               <h3 class="card-title">
@@ -119,7 +119,7 @@
 
           <div class="portfolio-card" data-project="2">
             <div class="card-image">
-              <img src="Images/chapter-card-white.png" alt="Project preview" />
+              <img src="images/chapter-card-white.png" alt="Project preview" />
             </div>
             <div class="card-content">
               <h3 class="card-title">
@@ -141,7 +141,7 @@
 
           <div class="portfolio-card" data-project="3">
             <div class="card-image">
-              <img src="Images/teacher-card-white.png" alt="Project preview" />
+              <img src="images/teacher-card-white.png" alt="Project preview" />
             </div>
             <div class="card-content">
               <h3 class="card-title">
@@ -164,7 +164,7 @@
 
           <div class="portfolio-card" data-project="5">
             <div class="card-image">
-              <img src="Images/lms-card-white.png" alt="Project preview" />
+              <img src="images/lms-card-white.png" alt="Project preview" />
             </div>
             <div class="card-content">
               <h3 class="card-title">
@@ -186,7 +186,7 @@
 
           <div class="portfolio-card" data-project="4">
             <div class="card-image">
-              <img src="Images/idea-card-white.png" alt="Project preview" />
+              <img src="images/idea-card-white.png" alt="Project preview" />
             </div>
             <div class="card-content">
               <h3 class="card-title">
@@ -208,7 +208,7 @@
           <div class="portfolio-card" data-project="6">
             <div class="card-image">
               <img
-                src="Images/dashboard-card-white.png"
+                src="images/dashboard-card-white.png"
                 alt="Project preview"
               />
             </div>
