--- a/index.html
+++ b/index.html
@@ -237,7 +237,12 @@
       <!-- Contact Section -->
       <section id="contact" class="section">
         <h2>Send a Message</h2>
-        <form class="contact-form" id="contactForm">
+        <form
+          class="contact-form"
+          id="contactForm"
+          action="https://formspree.io/f/xdkdbqnq"
+          method="POST"
+        >
           <div class="form-group">
             <label for="name" class="form-label">Name *</label>
             <input
@@ -246,8 +251,11 @@
               name="name"
               class="form-input"
               required
+              autocomplete="name"
+              maxlength="120"
             />
           </div>
+
           <div class="form-group">
             <label for="email" class="form-label">Email *</label>
             <input
@@ -256,8 +264,11 @@
               name="email"
               class="form-input"
               required
+              autocomplete="email"
+              inputmode="email"
             />
           </div>
+
           <div class="form-group">
             <label for="message" class="form-label">Message *</label>
             <textarea
@@ -266,10 +277,35 @@
               class="form-textarea"
               required
               placeholder="Feel free to ask a question or say hello!"
+              rows="6"
+              minlength="10"
+              maxlength="5000"
             ></textarea>
           </div>
+
+          <!-- Optional hidden field for subject -->
+          <input
+            type="hidden"
+            name="_subject"
+            value="New message from portfolio site"
+          />
+
+          <!-- Honeypot (spam trap): keep it hidden with CSS -->
+          <div class="hp-field" aria-hidden="true">
+            <label for="website">Do not fill this out</label>
+            <input type="text" id="website" name="_gotcha" tabindex="-1" />
+          </div>
+
+          <!-- Optional: redirect after submit -->
+          <!-- <input type="hidden" name="_redirect" value="https://yoursite.com/thank-you.html" /> -->
+
           <button type="submit" class="form-button">Send Message</button>
-          <div id="formMessage" class="form-message"></div>
+          <div
+            id="formMessage"
+            class="form-message"
+            role="status"
+            aria-live="polite"
+          ></div>
         </form>
       </section>
     </main>
