fix lesson plans

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
               trying new foods, or surrounded by books—collecting them, reading
               them, and always looking for the next one to add to my shelf.
             </p>
+            <p class="strengths">
+              Top CliftonStrengths — Learner • Developer • Intellection •
+              Empathy • Harmony
+            </p>
             <a
               href="documents/Shayla-Nelson-Resume.pdf"
               class="resume-link"
@@ -226,6 +230,7 @@
                 <span class="tech-tag">Power BI</span>
                 <span class="tech-tag">DAX</span>
                 <span class="tech-tag">SQL</span>
+                <span class="tech-tag">Databases</span>
                 <span class="tech-tag">Data Viz</span>
                 <span class="tech-tag">Analytics</span>
               </div>
@@ -400,6 +405,7 @@
             &copy; <span id="copyright-year">2025</span> Shayla Nelson |
             Instructional Design Portfolio
           </p>
+
           <div class="footer-actions">
             <a
               href="https://www.linkedin.com/in/shayla-nelson-306634211/"
